# Island_Simulation-v1

./: .gitignore  README.md  herb simulation  plan  requirements.txt  setup.cfg  tox.ini
examples/: check_sim.py
src/biosim/: Animal.py  Cycle.py  Eat.py  Fauna.py  Geography.py  GeographyArea.py  Hebivore_simulation.py  Herbivore_simulation.py  Mapping.py  Sim.py  Vis.py  Visualization.py  __init__.py  animal.py  animal_bk  cycle.py  geography.py  graphics_now.py  mapping.py  scratch.py  simulation.py  terrain.py  visualization.py
src/biosim/doc/: Geography_documentation.rst  Makefile  Mapping_documentation.rst  Terrain_documentation.rst  Visualization_documentation.rst  conf.py  index.rst  make.bat  simulation_documentation.rst
src/biosim/doc/sphinxbuild/doctrees/: Animal_documentation.doctree  Cycle_documentation.doctree  Geography_documentation.doctree  Mapping_documentation.doctree  Simulation_documentation.doctree  Visualization_documentation.doctree  environment.pickle  index.doctree
tests/: test_Animal.py  test_Carnivores_eat.py  test_Cycle.py  test_Geography.py  test_GeographyArea.py  test_Herbivore_simulation.py  test_Mapping.py  test_Sim.py  test_Visualization.py  test_biosim_interface.py  test_graphics_now.py  test_simulation.py
venv38/Scripts/: activate  activate.bat  cygdb-script.py  cython-script.py  cythonize-script.py  pip-script.py  pip3-script.py  pip3.8-script.py  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
(+30 files in other folders)
