[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = Anders Huse & Bishnu Poudel
author_email = anhuse@nmbu.no & bipo@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src